--- a/Bokumbo/index.html
+++ b/Bokumbo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bokumbo</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,9 @@
       <div class="container">
         <div class="specialization">
           <div class="specialization-description">
-            Děláme pro vás účetnictví a překládáme text z maďarštiny do češtiny už sedm let.
+            Děláme pro vás účetnictví a překládáme text z maďarštiny do češtiny
+            už sedm let. Nejrychlejší servis a nejnižší ceny v Brně. Hned
+            odpovídáme přes e-mail.
           </div>
           <div class="avatar">
             <img src="Avatar.png" />
@@ -33,7 +35,7 @@
           <div class="card" id="first">
             <div class="divider"></div>
             <p>
-              IČ 043 59 704 <br /><br />
+              PSČ: 628 00<br /><br />
               Adresa: Brno Židenice, Blatnická 4219/4
             </p>
           </div>
@@ -42,7 +44,7 @@
             <p>
               DIČ CZ04359704
               <br /><br />
-              PSČ: 628 00
+              IČ 043 59 704
             </p>
           </div>
           <div class="card" id="third">
@@ -54,7 +56,7 @@
             </p>
           </div>
         </div>
-        <div class="description">Nejrychlejší servis a nejnižší ceny v Brně. Hned odpovídáme přes e-mail.</div>
+        <div class="description"></div>
       </div>
     </div>
     <div class="footer">
