--- a/IKP Plus/index.html
+++ b/IKP Plus/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IKP Plus</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,12 @@
       <div class="container">
         <div class="specialization">
           <div class="specialization-description">
-            Specializace: Autodoprava, autoservis, stavební činnost
+            Nejrychlejší autodoprava po celé republice. Garantujeme vám rychlost
+            a spolehlivost.<br /><br />
+            Nevíte, co se stalo s vaším autem? Můžeme vám nabídnout nás
+            autoservis. Rychlá oprava a nízké ceny.<br /><br />
+            Rychlé postavíme vám dům za malé peníze. Stavíme byty už deset let.
+            Nejlepší kvalita, kterou můžete najít.
           </div>
           <div class="avatar">
             <img src="Avatar.png" />
@@ -33,7 +38,7 @@
           <div class="card" id="first">
             <div class="divider"></div>
             <p>
-              IČ: 071 83 925
+              PSČ: 118 00
               <br /><br />
               Adresa: Nerudova 209/10,<br />
               Praha 1
@@ -44,7 +49,7 @@
             <p>
               DIČ: CZ07183925
               <br /><br />
-              PSČ: 118 00
+              IČ: 071 83 925
             </p>
           </div>
           <div class="card" id="third">
@@ -55,11 +60,6 @@
               Telefon: +420 774 499 495
             </p>
           </div>
-        </div>
-        <div class="description">
-          Nejrychlejší autodoprava po celé republice. Garantujeme vám rychlost a spolehlivost. 
-          Nevíte, co se stalo s vaším autem? Můžeme vám nabídnout nás autoservis. Rychlá oprava a nízké ceny. 
-          Rychlé postavíme vám dům za malé peníze. Stavíme byty už deset let. Nejlepší kvalita, kterou můžete najít.
         </div>
       </div>
     </div>
