--- a/MY3 Bohemia/index.html
+++ b/MY3 Bohemia/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MY3 Bohemia</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,8 @@
       <div class="container">
         <div class="specialization">
           <div class="specialization-description">
-            Specializace: Výroba a prodej kovodělných výrobků pro automotive
+            Vyrobíme pro vás kovodělné výrobky nejvyšší kvality. Zabýváme se tím
+            5 let a děláme to rychlé a spolehlivé. Objednat můžete telefonicky.
           </div>
           <div class="avatar">
             <img src="Avatar.png" />
@@ -33,8 +34,7 @@
           <div class="card" id="first">
             <div class="divider"></div>
             <p>
-              IČ: 078 79 229
-
+              PSČ: 120 00
               <br /><br />
               Adresa: Anglická 336/21, <br />
               Praha 2
@@ -46,7 +46,7 @@
               DIČ: CZ07879229
 
               <br /><br />
-              PSČ: 120 00
+              IČ: 078 79 229
             </p>
           </div>
           <div class="card" id="third">
@@ -58,12 +58,6 @@
               Telefon: +420 734 245 444
             </p>
           </div>
-        </div>
-        <div class="description">
-          Nejrychlejší autodoprava po celé republice. Garantujeme vám rychlost a spolehlivost. 
-          Nevíte, co se stalo s vaším autem? Můžeme vám nabídnout nás autoservis. Rychlá oprava a nízké ceny. 
-          Rychlé postavíme vám dům za malé peníze. Stavíme byty už deset let. Nejlepší kvalita, kterou můžete najít.
-          průmysl
         </div>
       </div>
     </div>
