--- a/SAGOS Service/index.html
+++ b/SAGOS Service/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAGOS Service</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,9 +23,11 @@
       <div class="container">
         <div class="specialization">
           <div class="specialization-description">
-            Specializace: Opravy a prodej CNC<br />
-            strojů, specializovaná autopůjčovna<br />
-            luxusních vozů
+            Zabýváme se opravou a prodejem CNC strojů. Nejrychlejší oprava v
+            celém Brně. Garantujeme vám nejvyšší kvalitu a nejnižší ceny v
+            segmentu.<br /><br />
+            My taký se specializujeme na autopůjčení luxusních aut. Podrobnou
+            informaci můžete naleznout telefonicky.
           </div>
           <div class="avatar">
             <img src="Avatar.png" />
@@ -35,7 +37,7 @@
           <div class="card" id="first">
             <div class="divider"></div>
             <p>
-              IČ: 061 03 481
+              PSČ: 118 00
               <br /><br />
               Adresa: Nerudova 209/10,<br />
               Praha 1
@@ -46,7 +48,7 @@
             <p>
               DIČ:CZ06103481
               <br /><br />
-              PSČ: 118 00
+              IČ: 061 03 481
             </p>
           </div>
           <div class="card" id="third">
@@ -59,9 +61,7 @@
             </p>
           </div>
         </div>
-        <div class="description">
-          Vyrobíme pro vás kovodělné výrobky nejvyšší kvality. Zabýváme se tím 5 let a děláme to rychlé a spolehlivé. Objednat můžete telefonicky.
-        </div>
+        <div class="description"></div>
       </div>
     </div>
     <div class="footer">
